Added possibility to setup backup

--- a/backend/src/main/resources/application.conf
+++ b/backend/src/main/resources/application.conf
@@ -8,6 +8,8 @@ extendedmind {
     isHighAvailability = false
     startServer = false
     serverPort = 7473
+    # Optional Neo4j properties file
+    #propertiesFile = "src/main/resources/neo4j.properties"
   }
   security {
     # HEX encoded 16 bytes
