--- a/pom.xml
+++ b/pom.xml
@@ -103,7 +103,7 @@
         <groupId>org.extendedmind</groupId>
         <artifactId>backend</artifactId>
         <version>${project.version}</version>
-        <classifier>jar-with-dependencies</classifier>
+        <classifier>dist</classifier>
         <type>jar</type>
       </dependency>
 
