Combined all javascript files to one file, removed unnecessary files from war

--- a/frontend/core/pom.xml
+++ b/frontend/core/pom.xml
@@ -212,8 +212,7 @@
             WEB-INF/wro.*,
             static/less*/**,
             static/js*/**,
-            static/lib/less*/**,
-            static/lib/jasmine*/**</packagingExcludes>
+            static/lib/**</packagingExcludes>
         </configuration>
       </plugin>
       <plugin>
