--- a/frontend/core/pom.xml
+++ b/frontend/core/pom.xml
@@ -267,10 +267,9 @@
         </executions>
         <configuration>
           <sourceDirectory>${project.basedir}/src/main/webapp/static</sourceDirectory>
+          <compress>true</compress>
           <includes>
-            <include>less/em-bootstrap.less</include>
             <include>less/em.less</include>
-            <include>less/carousel.less</include>
           </includes>
           <lessJs>${project.basedir}/src/main/webapp/static/lib/less/less-min.js</lessJs>
         </configuration>
@@ -295,8 +294,32 @@
           <wroManagerFactory>ro.isdc.wro.maven.plugin.manager.factory.ConfigurableWroManagerFactory</wroManagerFactory>
           <destinationFolder>${basedir}/src/main/webapp/static</destinationFolder>
           <jsDestinationFolder>${basedir}/src/main/webapp/static/</jsDestinationFolder>
-          <cssDestinationFolder>${basedir}/src/main/webapp/static/css/</cssDestinationFolder>  
         </configuration>
+      </plugin>
+      <plugin>
+          <artifactId>maven-resources-plugin</artifactId>
+          <version>2.6</version>
+          <executions>
+              <execution>
+                  <id>copy-em-unpacked</id>
+                  <phase>prepare-package</phase>
+                  <goals>
+                      <goal>copy-resources</goal>
+                  </goals>
+                  <configuration>
+                      <outputDirectory>${project.basedir}/src/main/webapp/static/css/</outputDirectory>
+                      <overwrite>true</overwrite>
+                      <resources>
+                          <resource>
+                              <directory>${project.build.directory}/less/</directory>
+                              <includes>
+                                  <include>em.css</include>
+                              </includes>
+                          </resource>
+                      </resources>
+                  </configuration>
+              </execution>
+          </executions>
       </plugin>
     </plugins>
     <pluginManagement>
