--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@ frontend/core/*.sublime-workspace
 # Ignore Maven builds
 target/
 frontend/core/src/main/webapp/test/json/
+frontend/core/src/main/webapp/static/em.min.js
+frontend/core/src/main/webapp/static/css
 
 # Ignore PhantomJS logs
 phantomjsdriver.log
