Added email to accept URL

--- a/backend/src/main/resources/application.conf
+++ b/backend/src/main/resources/application.conf
@@ -53,7 +53,7 @@ extendedmind {
       requestInviteConfirmationTitle = "get ready to extend your mind"
       requestInviteOrderNumberURI = "waiting.html?uuid=uuidValue"
       acceptInviteRequestTitle = "the wait is over"
-      acceptInviteURI = "accept/inviteValue"
+      acceptInviteURI = "accept/inviteValue?email=emailValue"
     }
   }
 }
