--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -37,7 +37,7 @@
   </developers>
 
   <properties>
-    <neo4j.version>2.0.0-M05</neo4j.version>
+    <neo4j.version>2.0.0-RC1</neo4j.version>
     <spray.version>1.2-RC2</spray.version>
     <akka.version>2.2.3</akka.version>
   </properties>
@@ -93,7 +93,7 @@
     <dependency>
       <groupId>org.extendedmind</groupId>
       <artifactId>neo4j-scala</artifactId>
-      <version>0.3-SNAPSHOT</version>
+      <version>1.0-SNAPSHOT</version>
       <type>jar</type>
       <scope>compile</scope>
     </dependency>
@@ -151,13 +151,13 @@
     <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-core</artifactId>
-      <version>0.9.30</version>
+      <version>1.0.9</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
-      <version>0.9.30</version>
+      <version>1.0.9</version>
       <scope>compile</scope>
     </dependency>
 
