Added Phonegap project to main build. Fixed PhantomJS fetch from repo

--- a/frontend/core/pom.xml
+++ b/frontend/core/pom.xml
@@ -169,7 +169,8 @@
           </sourceIncludes>
           <webDriverClassName>org.openqa.selenium.phantomjs.PhantomJSDriver</webDriverClassName>
           <webDriverCapabilities>
-            <phantomjs.binary.path>${project.build.directory}/phantomjs-${phantomjs.version}/${platform.classifier}/bin/phantomjs</phantomjs.binary.path>
+            
+<phantomjs.binary.path>${project.build.directory}/phantomjs-${phantomjs.jar.version}/${platform.classifier}/bin/phantomjs</phantomjs.binary.path>
           </webDriverCapabilities>
         </configuration>
       </plugin>
