--- a/pom.xml
+++ b/pom.xml
@@ -141,7 +141,7 @@
       <dependency>
         <groupId>org.scalatest</groupId>
         <artifactId>scalatest_${scala.version.short}</artifactId>
-        <version>2.0.RC2</version>
+        <version>2.0</version>
       </dependency>
       <dependency>
         <groupId>org.zeroturnaround</groupId>
@@ -240,7 +240,7 @@
         <plugin>
           <groupId>org.scalatest</groupId>
           <artifactId>scalatest-maven-plugin</artifactId>
-          <version>1.0-M4-SNAP1</version>
+          <version>1.0-RC2</version>
         </plugin>
       </plugins>
     </pluginManagement>
