--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -205,6 +205,12 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <type>jar</type>
+      <scope>test</scope>
+    </dependency>    
+    <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-all</artifactId>
       <version>1.9.5</version>
@@ -232,8 +238,8 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <skipTests>true</skipTests>
+        <configuration>        
+          <skipTests>${skipJUnitTests}</skipTests>
         </configuration>
       </plugin>
       <plugin>
@@ -259,6 +265,9 @@
             </goals>
           </execution>
         </executions>
+        <configuration>        
+          <skipTests>${skipScalaTestTests}</skipTests>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
