--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -240,6 +240,9 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>        
           <skipTests>${skipJUnitTests}</skipTests>
+          <includes>
+            <include>**/*Spec.*</include>
+          </includes>
         </configuration>
       </plugin>
       <plugin>
