--- a/frontend/core/pom.xml
+++ b/frontend/core/pom.xml
@@ -164,8 +164,9 @@
             <include>lib/base64.js</include>
             <include>lib/idangerous/idangerous.swiper-2.4.js</include>
             <include>lib/localytics.js</include>
-            <include>js/*.js</include>
-            <include>js/**/*.js</include>
+            <include>app/*.js</include>
+            <include>common/**/*.js</include>
+            <include>app/**/*.js</include>
             <include>mockHelpers.js</include>
           </sourceIncludes>
           <webDriverClassName>org.openqa.selenium.phantomjs.PhantomJSDriver</webDriverClassName>
