--- a/frontend/core/pom.xml
+++ b/frontend/core/pom.xml
@@ -165,7 +165,8 @@
             <include>lib/idangerous/idangerous.swiper-2.4.js</include>
             <include>lib/localytics.js</include>
             <include>app/*.js</include>
-            <include>common/**/*.js</include>
+            <include>common/common.js</include>
+            <include>common/*.js</include>
             <include>app/**/*.js</include>
             <include>mockHelpers.js</include>
           </sourceIncludes>
