--- a/frontend/core/pom.xml
+++ b/frontend/core/pom.xml
@@ -128,6 +128,7 @@
           </archive>
           <packagingExcludes>index_devel.html,
             index_async.html,
+            static/app/**/*.js,
             test*/**,
             WEB-INF/wro.*,
             static/less*/**,
