Added accordion implementation to inbox

--- a/frontend/core/pom.xml
+++ b/frontend/core/pom.xml
@@ -129,6 +129,7 @@
           <packagingExcludes>index_devel.html,
             index_async.html,
             static/app/**/*.js,
+            static/common/**/*.js,
             test*/**,
             WEB-INF/wro.*,
             static/less*/**,
