--- a/frontend/phonegap/app/platforms/android/ant.properties
+++ b/frontend/phonegap/app/platforms/android/ant.properties
@@ -1,4 +1,5 @@
-key.store=KEY_STORE_PATH
-key.alias=ALIAS
-key.store.password=PASSWORD
-key.alias.password=PASSWORD
+sdk.dir=/home/ttiurani/devel/android-sdk-linux
+key.store=/home/ttiurani/.phonegap/android/extended_mind_android.keystore
+key.alias=extendedmind_beta
+key.store.password=Gw%h7G3Q6YbYHk5
+key.alias.password=Gw%h7G3Q6YbYHk5
