--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -37,7 +37,7 @@
   </developers>
 
   <properties>
-    <neo4j.version>2.0.0-RC1</neo4j.version>
+    <neo4j.version>2.0.0</neo4j.version>
     <spray.version>1.2-RC2</spray.version>
     <akka.version>2.2.3</akka.version>
   </properties>
