Beginnings of forgot password

--- a/backend/src/main/resources/application.conf
+++ b/backend/src/main/resources/application.conf
@@ -49,6 +49,8 @@ extendedmind {
       requestInviteOrderNumberURI = "waiting.html?uuid=uuidValue"
       acceptInviteRequestTitle = "the wait is over"
       acceptInviteURI = "accept/inviteValue?email=emailValue"
+      resetPasswordTitle = "password reset instructions"
+      resetPasswordURI = "reset/resetCodeValue?email=emailValue"
     }
   }
 }
