--- a/frontend/core/pom.xml
+++ b/frontend/core/pom.xml
@@ -171,7 +171,9 @@
             <include>common/common.js</include>
             <include>common/*.js</include>
             <include>app/**/*.js</include>
-            <include>mockHelpers.js</include>
+            <include>testApp.js</include>
+            <include>Mock*.js</include>
+            <include>apptest/**/*.js</include>
           </sourceIncludes>
           <webDriverClassName>org.openqa.selenium.phantomjs.PhantomJSDriver</webDriverClassName>
           <webDriverCapabilities>
