Ignored two build artifacts

--- a/frontend/phonegap/.gitignore
+++ b/frontend/phonegap/.gitignore
@@ -7,11 +7,13 @@ app/www/static
 app/platforms/ios/build
 app/platforms/ios/www
 app/platforms/ios/em/config.xml
+app/platforms/ios/em/em-Info.plist
 
 # android
-app/platforms/android/assets/static
 app/platforms/android/ant.properties
+app/platforms/android/assets/static
 app/platforms/android/assets/www/static
+app/platforms/android/assets/www/index.html
 app/platforms/android/res/xml/config.xml
 app/platforms/ios/cordova/defaults.xml
 *.keystore
