cordova android platform updated to 3.3.0

--- a/frontend/phonegap/app/platforms/android/project.properties
+++ b/frontend/phonegap/app/platforms/android/project.properties
@@ -17,3 +17,5 @@ android.library.reference.2=CordovaLib
 android.library.reference.3=CordovaLib
 android.library.reference.4=CordovaLib
 android.library.reference.5=CordovaLib
+android.library.reference.6=CordovaLib
+android.library.reference.7=CordovaLib
