--- a/frontend/core/src/main/webapp/test/.jshintrc
+++ b/frontend/core/src/main/webapp/test/.jshintrc
@@ -17,10 +17,11 @@
     "beforeEach"      : false,
     "describe"        : false,
     "expect"          : false,
+    "getJSONFixture"  : false,
     "inject"          : false,
     "it"              : false,
+    "jasmine"         : false,
     "module"          : false,
-    "getJSONFixture"  : false,
     "spyOn"           : false
   },
 
