Added "Snap" to .jshintrc's globals.

--- a/frontend/core/src/main/webapp/static/.jshintrc
+++ b/frontend/core/src/main/webapp/static/.jshintrc
@@ -13,6 +13,7 @@
     "FastClick"         : false,
     "html5Mode"         : false,
     "newDayTimer"       : false,
+    "Snap"              : false,
     "Swiper"            : false,
     "urlPrefix"         : false
   },
