Snap.js lib to pom.xml and wro.xml. Snap.js tests.

--- a/frontend/core/pom.xml
+++ b/frontend/core/pom.xml
@@ -163,6 +163,7 @@
             <include>lib/base64.js</include>
             <include>lib/fastclick.js</include>
             <include>lib/expanding.js</include>
+            <include>lib/snap.js</include>
             <include>app/*.js</include>
             <include>common/common.js</include>
             <include>common/*.js</include>
